--- a/Server/WCFServer/Tools/ArchorUDPTool/ArchorConfigureWindow.xaml
+++ b/Server/WCFServer/Tools/ArchorUDPTool/ArchorConfigureWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="ArchorConfigureWindow" Height="450" Width="800">
     <Grid>
-        <LocationServer:ArchorConfigureBox />
+        <LocationServer:ArchorConfigureBox x:Name="ArchorConfigureBox1"/>
     </Grid>
 </Window>
