--- a/Server/WCFServer/Tools/ArchorUDPTool/UDPArchorInfoWindow.xaml
+++ b/Server/WCFServer/Tools/ArchorUDPTool/UDPArchorInfoWindow.xaml
@@ -9,11 +9,12 @@
     <StackPanel>
         <Menu>
             <MenuItem Header="GetAll" Name="MenuGetAll" Click="MenuGetAll_Click"></MenuItem>
+            <MenuItem Header="重启" Name="MenuReset" Click="MenuReset_OnClick"></MenuItem>
         </Menu>
         <local:UDPArchorInfoBox x:Name="AibId" Label="Id" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
         <local:UDPArchorInfoBox x:Name="AibIp" Label="Ip" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
         <local:UDPArchorInfoBox x:Name="AibType" Label="Archor Type" Key="Type" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
-        <local:UDPArchorInfoBox x:Name="AibServerIP" Label="Server IP" Key="ServerIp" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
+        <local:UDPArchorInfoBox x:Name="AibServerIp" Label="Server IP" Key="ServerIp" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
         <local:UDPArchorInfoBox x:Name="AibServerPort" Label="Server Port" Key="ServerPort" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
         <local:UDPArchorInfoBox x:Name="AibMask" Label="子网掩码" Key="Mask" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
         <local:UDPArchorInfoBox x:Name="AibGateway" Label="网关" Key="Gateway" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
