--- a/Server/WCFServer/Tools/ArchorUDPTool/PingWindow.xaml
+++ b/Server/WCFServer/Tools/ArchorUDPTool/PingWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ArchorUDPTool"
         mc:Ignorable="d"
-        Title="PingWindow" Height="450" Width="800" Loaded="Window_Loaded">
+        Title="PingWindow" Height="450" Width="800" Loaded="Window_Loaded" Closed="Window_Closed">
     <DockPanel>
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Top">
             <Label>IP:</Label>
