--- a/Server/WCFServer/Tools/ArchorUDPTool/ArchorConfigureBox.xaml
+++ b/Server/WCFServer/Tools/ArchorUDPTool/ArchorConfigureBox.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl xmlns:WPFClientControlLib="clr-namespace:WPFClientControlLib;assembly=WPFClientControlLib"  x:Class="LocationServer.ArchorConfigureBox"
+﻿<UserControl xmlns:Controls="clr-namespace:ArchorUDPTool.Controls"  xmlns:WPFClientControlLib="clr-namespace:WPFClientControlLib;assembly=WPFClientControlLib"  x:Class="LocationServer.ArchorConfigureBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -15,14 +15,15 @@
                 <MenuItem Header="Checked" Name="MenuRestartChecked" Click="MenuRestartChecked_Click"></MenuItem>
             </MenuItem>
            
-            <MenuItem Header="设置服务器">
-                <MenuItem Header="设置ServerIP(192.168.5.1)" Name="MenuSetServerIp1" Click="MenuSetServerIP1_OnClick"></MenuItem>
-                <MenuItem Header="设置ServerIP(192.168.10.155)" Name="MenuSetServerIp2" Click="MenuSetServerIp2_OnClick"></MenuItem>
-                <MenuItem Header="设置ServerIP(192.168.3.251)" Name="MenuSetServerIp3" Click="MenuSetServerIp3_OnClick"></MenuItem>
-                <MenuItem Header="设置ServerIP(192.168.4.251)" Name="MenuSetServerIp4" Click="MenuSetServerIp4_OnClick"></MenuItem>
-                <MenuItem Header="设置ServerIP(192.168.5.251)" Name="MenuSetServerIp5" Click="MenuSetServerIp5_OnClick"></MenuItem>
-                <MenuItem Header="设置ServerIP(192.168.*.251)" Name="MenuSetServerIp6" Click="MenuSetServerIp6_OnClick"></MenuItem>
-                <MenuItem Header="设置ServerIP(192.168.*.253)" Name="MenuSetServerIp7" Click="MenuSetServerIp7_OnClick"></MenuItem>
+            <MenuItem Header="设置服务器Ip">
+                <MenuItem>
+                    <MenuItem.Header>
+                        <StackPanel Orientation="Horizontal">
+                            <ComboBox Name="CbServerIpList" Width="120"></ComboBox>
+                            <Button Name="BtnSetServerIp" Click="BtnSetServerIp_Click">设置</Button>
+                        </StackPanel>
+                    </MenuItem.Header>
+                </MenuItem>
             </MenuItem>
             <MenuItem Header="测试" Name="MenuTest" Click="MenuTest_Click"></MenuItem>
             <MenuItem Header="工具">
@@ -30,12 +31,11 @@
                 <MenuItem Header="监听" Name="MenuListen" Click="MenuListen_Click"></MenuItem>
             </MenuItem>
             <MenuItem Header="取消" Name="MenuCancel" Click="MenuCancel_Click"></MenuItem>
-            <!--<MenuItem Header="批量命令">
-                <MenuItem Header="按清单扫描Id+Ping" Name=""></MenuItem>
-            </MenuItem>-->
         </Menu>
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" >
-            <Label>Remote IP</Label>
+            <Label>LocalIP</Label>
+            <ComboBox Name="CbLocalIps" Width="120" SelectionChanged="CbLocalIps_SelectionChanged"></ComboBox>
+            <Label>广播IP</Label>
             <TextBox Width="230" Name="TbRemote" Text="192.168.1.255;192.168.3.255;192.168.4.255;192.168.5.255;192.168.10.255;" TextWrapping="Wrap"></TextBox>
             <Label>Port</Label>
             <TextBox Width="50" Name="TbPort" Text="4646"></TextBox>
@@ -106,47 +106,8 @@
         </TabControl>
         <TabControl>
             <TabItem Header="数据">
-                <DockPanel>
-                    <DataGrid Name="DataGrid3" AutoGenerateColumns="False">
-                        <DataGrid.ContextMenu>
-                            <ContextMenu>
-                                <MenuItem Header="刷新当条数据" Name="MenuRefreshOne" Click="MenuRefreshOne_Click"/>
-                                <MenuItem Header="刷新多条数据" Name="MenuRefeshMuti" Click="MenuRefeshMuti_Click"/>
-                                <MenuItem Header="刷新Checked数据" Name="MenuRefreshMultiChecked" Click="MenuRefreshMultiChecked_Click"/>
-                                <MenuItem Header="Ping" Name="MenuPingArchor" Click="MenuPingArchor_Click"/>
-                                <MenuItem Header="设置" Name="MenuSetArchor" Click="MenuSetArchor_Click"></MenuItem>
-                                <MenuItem Header="重启" Name="MenuRestartOne" Click="MenuRestartOne_OnClick"></MenuItem>
-                            </ContextMenu>
-                        </DataGrid.ContextMenu>
-                        <DataGrid.Columns>
-                            <DataGridCheckBoxColumn Binding="{Binding IsChecked}">
-                                <DataGridCheckBoxColumn.Header>
-                                    <CheckBox Name="CheckColumn" Checked="CheckColumn_Checked" Unchecked="CheckColumn_Unchecked"></CheckBox>
-                                </DataGridCheckBoxColumn.Header>
-                            </DataGridCheckBoxColumn>
-                            <DataGridTextColumn Header="Num" Binding="{Binding Num}"/>
-                            <DataGridTextColumn Header="客户端" Binding="{Binding Client}"/>
-                            <DataGridTextColumn Header="区域" Binding="{Binding Area}"/>
-                            <DataGridTextColumn Header="连通" Binding="{Binding IsConnected}"/>
-                            <DataGridTextColumn Header="Ping" Binding="{Binding Ping}"/>
-                            <DataGridTextColumn Header="值" Binding="{Binding Value}"/>
-                            <DataGridTextColumn Header="时间" Binding="{Binding UpdateTime}"/>
-                            <DataGridTextColumn Header="Archor ID" Binding="{Binding Id}"/>
-                            <DataGridTextColumn Header="Archor IP" Binding="{Binding Ip}"/>
-                            <DataGridTextColumn Header="Archor Type" Binding="{Binding Type}"/>
-                            <DataGridTextColumn Header="Server IP" Binding="{Binding ServerIp}"/>
-                            <DataGridTextColumn Header="Server Port" Binding="{Binding ServerPort}"/>
-                            <DataGridTextColumn Header="子网掩码" Binding="{Binding Mask}"/>
-                            <DataGridTextColumn Header="网关" Binding="{Binding Gateway}"/>
-                            <DataGridTextColumn Header="DHCP" Binding="{Binding DHCP}"/>
-                            <DataGridTextColumn Header="软件版本" Binding="{Binding SoftVersion}"/>
-                            <DataGridTextColumn Header="硬件版本" Binding="{Binding HardVersion}"/>
-                            <DataGridTextColumn Header="功率" Binding="{Binding Power}"/>
-                            <DataGridTextColumn Header="MAC" Binding="{Binding MAC}"/>
-                        </DataGrid.Columns>
-                    </DataGrid>
-                </DockPanel>
-                
+                <Controls:UDPArchorListBox x:Name="DataGrid3">
+                </Controls:UDPArchorListBox>
             </TabItem>
         </TabControl>
         
