--- a/Server/WCFServer/Tools/ArchorUDPTool/ArchorConfigureWindow.xaml
+++ b/Server/WCFServer/Tools/ArchorUDPTool/ArchorConfigureWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LocationServer.Models.EngineTool"
         mc:Ignorable="d"
-        Title="ArchorConfigureWindow" Height="450" Width="800">
+        Title="ArchorConfigureWindow" Height="450" Width="800" Closed="Window_Closed">
     <Grid>
         <LocationServer:ArchorConfigureBox x:Name="ArchorConfigureBox1"/>
     </Grid>
