--- a/Server/WCFServer/LocationWCF/Windows/DbConfigureWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/DbConfigureWindow.xaml
@@ -22,7 +22,7 @@
             <MenuItem Header="工具">
                 <MenuItem Header="整理初始化设备" Name="MenuRemoveArchor" Click="MenuRemoveArchor_Click"></MenuItem>
                 <MenuItem Header="导入初始化设备" Name="MenuImportDevs" Click='MenuImportDevs_Click'></MenuItem>
-
+                <MenuItem Header="生成基站数据" Name="MenuExportArchorData" Click="MenuExportArchorData_Click"></MenuItem>
             </MenuItem>
         </Menu>
         <ScrollViewer VerticalScrollBarVisibility="Auto" >
